2013-06-14 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp:2132 replace fprintf with fwrite (in hope to avoid
	deadlock during closing of the logger object on windows, not sure
	what exactly was going on, but have seen it stuck in fprintf)
	* src/category.cpp:1473 initialize nold to 0 to avoid problem with
	incorrect values later

2013-06-13 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: in function append1 move the section of code that
	clears the existing list of columns to be after the call of
	appendToBackup (to provide an opportunity for appendToBackup to
	produce a combined list of columns, a problem reported by Mark
	Hansen mark at digitalbrandmine.com)
	* src/column.cpp:5448 assign tmp to 0 after delete statement (to
	prevent it being used again)
	* src/category.cpp: in function startPositions, add code to deal
	with empty data file

2013-06-12 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: change call to logWarning in actualMinMax to use
	LOGGER

2013-06-07 John Wu <John dot Wu at ACM dot org>
	* doc/ibisCommandLine.html: update the description of the select
	clause

2013-06-02 John Wu <John dot Wu at ACM dot org>
	* java/gov/lbl/fastbit/FastBitStringWriter.java: in addRow change
	getAndAdd to addAndGet to get the new offset instead of the old
	* src/capi.cpp: in function fastbit_part_list::find invoke
	part::updateData to make sure the information about the data
	partition is up-to-date (to address a problem reported by Bailu
	Ding)
	* src/query.cpp:1849 change uid to user to allow the default user
	name to be used for creating new query token

2013-06-01 John Wu <John dot Wu at ACM dot org>
	* java/gov/lbl/fastbit/FastBitStringWriter.java: add code to deal
	with the initial value of the offset to be written to .sp file
	(a problem reported by Bailu Ding)

2013-05-30 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: some versions of bord::column::evaluateRange
	negected to check if an index is available
