@@ -7,14 +7,8 @@
 /// Defines minor utility functions and common classes used by
 /// FastBit.
 ///
-#if defined(_WIN32) && defined(_MSC_VER) && defined(_DEBUG)
-#define _CRTDBG_MAP_ALLOC
-#include <stdlib.h>
-#include <crtdbg.h>
-#else
-#include <stdlib.h>
-#endif
 #include "const.h"
+#include <stdlib.h>
 
 #include <cctype>	// std::isspace
 #include <cstring>	// std::strcpy
